--- a/app/globals.css
+++ b/app/globals.css
@@ -73,3 +73,39 @@ input[type="search"]::-webkit-search-results-button,
 input[type="search"]::-webkit-search-results-decoration {
   display: none;
 }
+
+/* Custom scrollbar styles */
+.episodes-container {
+    /* Custom scrollbar styles for WebKit-based browsers */
+    overflow-y: scroll; /* Ensure the scrollbar is visible */
+}
+
+.episodes-container::-webkit-scrollbar {
+    width: 6px; /* Adjust width as needed */
+}
+
+.episodes-container::-webkit-scrollbar-track {
+    background: transparent; /* Track color */
+}
+
+.episodes-container::-webkit-scrollbar-thumb {
+    background: #313131; /* Thumb color */
+    border-radius: 10px; /* Rounded corners for thumb */
+}
+
+@keyframes fadeIn {
+    from {
+        opacity: 0;
+        transform: translateY(10px);
+    }
+    to {
+        opacity: 1;
+        transform: translateY(0);
+    }
+}
+
+.fade-in {
+    opacity: 0;
+    animation: fadeIn 0.5s forwards;
+    animation-delay: 0.2s;
+}
