apollo client is now being cached

--- a/app/globals.css
+++ b/app/globals.css
@@ -11,6 +11,7 @@
   src: url('../public/fonts/aeonik.otf') format('opentype');
   font-weight: normal;
   font-style: normal;
+  font-display: swap;
 }
 
 @layer base {
